# nota-tecnica-backend

./: .env.example  .gitignore  Documentacao_Produto_Web_App_Automotivo_revisado_design_original.md  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260629_0001_auth_users_vehicles_workshops.py  20260630_0002_maintenance_documents_validation.py  20260706_0003_document_upload_statuses.py  20260707_0004_garage_validation_flow.py
app/: main.py
app/api/: router.py
app/api/v1/: health.py  router.py
app/core/: config.py  exceptions.py  validators.py
app/db/: base.py  session.py
app/integrations/queue/: celery_app.py
app/integrations/storage/: r2.py
app/modules/admin/: router.py  service.py
app/modules/auth/: dependencies.py  router.py  schemas.py  security.py  service.py
app/modules/documents/: models.py  router.py  schemas.py  service.py
app/modules/garage/: requirements.py  router.py  schemas.py  service.py
app/modules/maintenance/: models.py  router.py  schemas.py  service.py
app/modules/public/: router.py  schemas.py  service.py
app/modules/ranking/: router.py  schemas.py  service.py
app/modules/users/: models.py  router.py  schemas.py  service.py
app/modules/vehicles/: models.py  router.py  schemas.py  (+1 more)
tests/: conftest.py  test_admin_validation.py  test_auth_users.py  test_documents.py  test_garage.py  test_garage_admin.py  test_health.py  test_integrations.py  test_maintenance.py  test_public_history_preview.py  test_ranking.py  test_settings.py  test_validators.py  test_vehicles.py  test_workshops.py
(+4 files in other folders)
